# Tolima

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Clipper.cpp  Clipper.h  Instrumentor.h  Loader.cpp  Loader.h  Makefile  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Point.cpp  Point.h  README.md  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TriMesh.cpp  TriMesh.h  Triangle.cpp  Triangle.h  main.cpp
include/: Camera.h  Clipper.h  Instrumentor.h  Loader.h  Matrix.h  Object.h  Renderer.h  Scene.h  Shader.h  TriMesh.h  Triangle.h
src/: Camera.cpp  Clipper.cpp  Loader.cpp  Matrix.cpp  Object.cpp  Point.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  TriMesh.cpp  Triangle.cpp  main.cpp
